--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: salmon;
+/*     background-color: salmon; */
     min-height: 100vh;
 }
 
@@ -37,7 +37,7 @@ nav a {
     letter-spacing: 2px;
     height: 50px;
     display: inline-block;
-    background-color: pink;
+/*     background-color: pink; */
     line-height: 50px;
 }
 
